K8S/Ingress/16-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamingtablehelper-ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: gamingtablehelper.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway-clusterip-srv
                port:
                  number: 8080
